openshift/zac.dc.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: zac
spec:
  replicas: 1
  selector:
    name: zac
  strategy:
    resources: {}
    type: Recreate
  template:
    metadata:
      name: zac
      labels:
        name: zac
    spec:
      containers:
      - env:
        - name: KUBERNETES_SERVICE_HOST
          value: "172.30.0.1"
        - name: KUBERNETES_SERVICE_PORT
          value: "443"
        image: d1g1tal/zac:latest
        command: [ "/zac", "server" ]
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        name: zac
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
        securityContext:
          privileged: false
        terminationMessagePath: /dev/termination-log
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
  triggers:
  - type: ConfigChange
