openshift/zac.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: zac
spec:
  ports:
  - name: web
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    name: zac
  sessionAffinity: None
  type: ClusterIP
